# docs-from-repo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml
patches/: BUILD.bazel
src/: BUILD.bazel  main.go
