bazel_dep(name = "rules_go", version = "0.44.0")
bazel_dep(name = "gazelle", version = "0.35.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module_override(
    patch_strip = 1,
    patches = ["//patches:cloudflare_circl.patch"],
    path = "github.com/cloudflare/circl",
)
use_repo(
    go_deps,
    "com_github_go_git_go_git_v5",
)
